Added Swagger to Application start up

--- a/Web Form API/Web Form API.csproj
+++ b/Web Form API/Web Form API.csproj
@@ -5,5 +5,14 @@
     <RootNamespace>Web_Form_API</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\JamesThomas\source\repos\Web Form API\Web Form API\Web Form API.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
 
 </Project>
