added db context, db connection string, db migration data, updated API controller to use dbcontext, tested in swagger

--- a/Web Form API/appsettings.json
+++ b/Web Form API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FormDbConnection": "Server=(localdb)\\mssqllocaldb;Database=WebFormDb;Trusted_Connection=True;"
+  }
 }
