--- a/Web Form API/Web Form API.csproj
+++ b/Web Form API/Web Form API.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\JamesThomas\source\repos\Web Form API\Web Form API\Web Form API.xml</DocumentationFile>
+    <DocumentationFile>C:\Userskayla\source\repos\Web Form API\Web Form API\Web Form API.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
