--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 appsettings.json
+appsettings - Copy.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
