--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
     branches:
       - main
 
+env:
+  AZURE_WEBAPP_NAME: WebFormAPI
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  
+
 jobs:
   publish_api:
     runs-on: windows-latest
@@ -25,4 +30,19 @@ jobs:
         run: dotnet build "./Web Form API.sln" --configuration Release --no-restore        
 
       - name: Publish
-        run: dotnet publish "./Web Form API.sln" --configuration Release --no-build
+        run: dotnet publish "./Web Form API.sln" --configuration Release --no-build --output '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
+
+
+      - name: Deployment
+        uses: actions/webapps-deploy@2
+        with:
+          app-name: ${{env.AZURE_WEBAPP_NAME}}
+          publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE}}
+          package: "${{env.AZURE_WEBAPP_PACKAGE_PATH}}"          
+
+
+
+
+
+
+        
