--- a/Web Form API/Web Form API.csproj
+++ b/Web Form API/Web Form API.csproj
@@ -10,6 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Web Form API.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Web Form API.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
